# protocol-opcua-c

./: CMakeLists.txt  LICENSE-2.0.txt  README.md  README_windows.md  SConscript  SConstruct  build.sh  build_arm.sh  build_arm64.sh  build_auto.bat  build_linux.sh  build_windows.bat  install.sh  opcua-adapter.pc.in  unittest.sh
device-service-opcua/: README.md
docs/doxygen/html/: annotated.html  classes.html  command__adapter_8h.html  command__adapter_8h_source.html  common__client_8h.html  common__client_8h_source.html  common__server_8h.html  common__server_8h_source.html  dir_19b9eb00a494fb6a688c780c9e47e2dc.html  dir_275089585c7fc1b5fd5d7d42c69cb1da.html  dir_37d8e449c0bfd095a27843f706ee62a7.html  dir_43ad91b4bc766cfd1a3a3b6e5382695d.html  dir_73a699d1a48a08537af707562743f0c6.html  dir_787263e1913c1eb7993dc91db69f887d.html  dir_927f7ae30763595a6d607e834f4f2fe1.html  edge__command__type_8h.html  edge__command__type_8h_source.html  edge__identifier_8h.html  edge__identifier_8h_source.html  edge__malloc_8h.html  edge__malloc_8h_source.html  edge__message__type_8h.html  edge__message__type_8h_source.html  edge__node__identifier_8h.html  edge__node__identifier_8h_source.html  edge__node__type_8h.html  edge__node__type_8h_source.html  edge__opcua__common_8h.html  edge__opcua__common_8h_source.html  edge__status__code_8h.html  edge__status__code_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  (+75 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+38 more)
example/: CMakeLists.txt  SConscript  client.c  sample_common.h  sample_method.c  server.c
extlib/: open62541.c  open62541.h
extlibs/open62541/: SConscript  build.sh
include/: command_adapter.h  common_client.h  common_server.h  edge_command_type.h  edge_identifier.h  edge_malloc.h  edge_message_type.h  edge_node_identifier.h  edge_node_type.h  edge_opcua_common.h  edge_status_code.h  opcua_common.h  opcua_interface.h  opcua_manager.h
src/api/: opcua_manager.c
src/command/: browse.c  browse.h  cmd_util.c  cmd_util.h  command_adapter.h  method.c  method.h  read.c  read.h  subscription.c  subscription.h  write.c  write.h
src/command/browse/: browse.c  browse.h  browse_common.c  browse_common.h  browse_next.c  browse_next.h  browse_view.c  browse_view.h
src/node/: edge_node.c  edge_node.h
src/queue/: cacommon.h  caqueueingthread.c  caqueueingthread.h  cathreadpool.h  cathreadpool_pthreads.c  edgecommon.h  message_dispatcher.c  message_dispatcher.h  octhread.c  queue.c  queue.h  uarraylist.c  uqueue.c  uqueue.h
src/session/: edge_opcua_client.c  edge_opcua_client.h  edge_opcua_server.c  edge_opcua_server.h
src/session/discovery/: edge_discovery_common.c  edge_discovery_common.h  edge_find_servers.c  edge_find_servers.h  edge_get_endpoints.c  edge_get_endpoints.h
src/utils/: edge_list.c  edge_list.h  edge_logger.h  edge_malloc.c  edge_malloc.h  edge_map.c  edge_map.h  edge_open62541.c  edge_open62541.h  edge_random.c  edge_random.h  edge_utils.c  edge_utils.h
unittests/: README.md  SConstruct  generate_report.sh  methodTest.cpp  octhread_tests.cpp  opcuaTest.cpp  prep.sh  readTest.cpp  serverTest.c  subscriptionTest.cpp  test_common.h  uqueue_test.cpp  utilTests.cpp  writeTest.cpp
